2009-12-09  Steve Block  <steveblock@google.com>

        Reviewed by Adam Barth.

        Updates Android Makefiles with latest additions.
        https://bugs.webkit.org/show_bug.cgi?id=32278

        * Android.mk: Modified.
        * Android.v8.wtf.mk: Modified.

2009-12-09  Sam Weinig  <sam@webkit.org>

        Reviewed by Gavin Barraclough.

        Fix a bug found while trying to compile JavaScriptCore with clang++.

        * yarr/RegexPattern.h:
        (JSC::Yarr::PatternTerm::PatternTerm): Don't self assign here.  Use false instead.

2009-12-09  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Attempt to fix the Windows build.
        
        * wtf/FastMalloc.h:

2009-12-09  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Fix some things found while trying to compile JavaScriptCore with clang++.

        * wtf/FastMalloc.h:
        Add correct exception specifications for the allocation/deallocation operators.
        
        * wtf/Vector.h:
        * wtf/VectorTraits.h:
        Fix a bunch of struct/class mismatches.

2009-12-08  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin Adler.

        move code generation portions of Nodes.cpp to bytecompiler directory
        https://bugs.webkit.org/show_bug.cgi?id=32284

        * bytecompiler/NodesCodegen.cpp: Copied from parser/Nodes.cpp. Removed parts that
        are not about codegen.
        * parser/Nodes.cpp: Removed everything that is about codegen.

        Update build systems:
        
        * Android.mk:
        * GNUmakefile.am:
        * JavaScriptCore.gypi:
        * JavaScriptCore.pri:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * JavaScriptCoreSources.bkl:

2009-12-08  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        [wx] Mac plugins support.
        